mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\amsid\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\amsid\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/curreny-app-network: "true"
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: currenydb
        - name: MYSQL_PASSWORD
          value: currency
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_USER
          value: currency
        image: library/mysql:latest
        imagePullPolicy: ""
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-database-currency-volume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-database-currency-volume
        persistentVolumeClaim:
          claimName: mysql-database-currency-volume
status: {}
