zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\amsid\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411
  selector:
    io.kompose.service: zipkin
status:
  loadBalancer: {}
